Version 5.2.0
- Added GET as keyword to BASIC
- Added GET and PUT binary I/O to BASIC
- Added _vfs_open_sdcardx() to allow explicit setting of pins for SD card
- Changed Spin2 member variables to be layed out in the order declared
- Fixed QCOS, QSIN
- Fixed a crash with negative ending values in repeat
- Fixed a problem with SEND(func(...)) in Spin2
- Fixed a problem with initializing two dimensional C arrays with strings
- Modified P2 serial receive to use @evanh's suggestion of 28 bit async receive (so it is effectively 3 characters at a time)

Version 5.1.1
- Added QCOS and QSIN to Spin2
- Added _execve() and CHAIN functions to chain programs
- Added mkdir() function for host file system
- Fixed handling of getcwd for subdirectories
- Fixed handling of DEL in fgets() function
- Fixed GOSUB (it had bit-rotted and no longer worked properly)
- Made EXIT LOOP a synonym for EXIT DO

Version 5.1.0
- Added support for Spin2 constants clkmode_ and clkfreq_
- Added built in ASMCLK macro for Spin2
- Added CALL statement in BASIC
- Added improved error handling for BASIC
- Allow semicolons to seperate lines in C inline assembly (this makes it possible to put inline assembly in macros)
- Fixed another optimizer issue affecting C struct returns
- Fixed undefined _basic_print_unsigned error.
- Fixed a bug with pin ranges where the limits are variables and are given in (lo, hi) order
- Fixed bitfields in C structs being multiply defined
- Fixed sscanf() and similar string functions not working
- Fixed type of RECV() pointer in Spin2
- Fixed isprint() function in C
- Implemented FRAC operator for P1
- Implemented new (more accurate) IEEE floating point math routines
- Increased default buffer size for I/O on P2 (speeds up 9p operations)
- Made "append" mode force seeks to end of file before writes
- Made "_waitms" and "_waitus" work for long waits (more than a system counter rollover)
- More improvements to the BASIC strings library, again courtesy of JRoark