@@ -2,6 +2,7 @@ Version 5.2.0
 - Added GET as keyword to BASIC
 - Added GET and PUT binary I/O to BASIC
 - Added _vfs_open_sdcardx() to allow explicit setting of pins for SD card
+- Added new option -Wmax-errors=N to allow more errors to be printed in a run
 - Changed Spin2 member variables to be layed out in the order declared
 - Fixed QCOS, QSIN
 - Fixed a crash with negative ending values in repeat
